# advanced-python-series

./: .gitignore  README.md  workshop0.md  workshop1.md  workshop2.md  workshop3.md
workshop-0/: 02_data_structures.py  03_conditionals.py  04_loops.py  README.md  conda.md  dict.md  exception.md  function.md  numba-class.md  numba.md  numpy.md  pytest.md  set.md  torch.md  tuple.md  type_hint.md  uv.md  venv.md
workshop-0-examples/: 01_data_types.py  05_functions.py  06_simple_class.py
workshop-1/: 00-intro.md  10-func.md  20-class-1.md  20-class-2.md  20-class-3.md  20-class-4.md  30-package.md  40-release.md  99-conclude.md  README.md  class-1.md  class-2.md  class-3.md  class-4.md  class-5.md  ctype.md  heat1d_ext.py  heat1d_script.py  test_heat1d.py
workshop-1/scripts/: tohtml.sh  (+3 more)
workshop-1/src/heat1d-project/: README.md  pyproject.toml  run-heat.py
workshop-1/src/heat1d-project/src/heat1d/: heat1d_class.py
workshop-1/src/heat1d-project/src/heat1d_simulation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
workshop-2/: 00-intro.md  20-mpi-paradigm.md  21-environment.md  22-running-mpi.md  30-mpi4py-fft.md  31-mri.md  40-petsc.md  41-petsc_tao_app.md  42-petsc-eigen.md  43-petsc-snes.md  44-petsc-network.md  45-petsc-wave.md  46-petsc-ml.md  47-petsc-genomics.md  50-examples.md  99-conclude.md  README.md  test_fft_debug.py  test_fft_norm.py
workshop-3/: 00-intro.md  10-parallel-computing-fundamentals.md  12-cuda-basics.md  20-gpu-ecosystem-python.md  30-numba.md  40-cupy.md  50-cuda-python.md  60-jax.md  70-compare.md  80-mpi-gpu.md  99-refs.md  README.md
(+56 files in other folders)
